# fugue

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.bpro/plans/: 02-snapshot-reverse.md
.fugue/: .gitignore  config.yaml
.fugue/plans/: 01-core-identity_2026-03-25T11-08-14.md  03-plan-forward_2026-03-25T11-01-02.md  04-agent-governance_2026-03-25T11-19-27.md  05-model-management_2026-03-25T11-01-32.md  06-task-workflow_2026-03-25T10-40-25.md  07-deliverables-audit_2026-03-25T11-11-03.md  08-reporting-notifications_2026-03-25T11-20-50.md  09-infra-mcp.md  10-pmo-methodology_2026-03-25T10-57-18.md  requirements-v0_2026-03-25T00-20-47.md
.fugue/reports/: 2026-03-25-progress.html  2026-04-02-progress.html
.fugue/specs/: REQ-AGNT-001.yaml  REQ-AGNT-002.yaml  REQ-AGNT-003.yaml  REQ-AGNT-004.yaml  REQ-AGNT-005.yaml  REQ-AGNT-006.yaml  REQ-AGNT-007.yaml  REQ-AGNT-008.yaml  REQ-AGNT-009.yaml  REQ-AGNT-010.yaml  REQ-AGNT-011.yaml  REQ-AGNT-012.yaml  REQ-AGNT-013.yaml  REQ-CORE-001.yaml  REQ-CORE-002.yaml  REQ-CORE-003.yaml  REQ-CORE-004.yaml  REQ-CORE-005.yaml  REQ-CORE-006.yaml  REQ-CORE-007.yaml  REQ-DCMP-001.yaml  REQ-DCMP-002.yaml  REQ-DCMP-003.yaml  REQ-DCMP-004.yaml  REQ-DLVR-001.yaml  REQ-DLVR-002.yaml  REQ-DLVR-003.yaml  REQ-DLVR-004.yaml  REQ-DLVR-005.yaml  REQ-DLVR-006.yaml  REQ-DLVR-007.yaml  REQ-DLVR-008.yaml  REQ-INFR-001.yaml  REQ-INFR-002.yaml  REQ-INFR-003.yaml  REQ-INFR-004.yaml  REQ-INFR-005.yaml  REQ-INFR-006.yaml  REQ-MODL-001.yaml  REQ-MODL-002.yaml  (+112 more)
.fugue/tasks/: TASK-001.yaml  TASK-002.yaml  (+9 more)
src/: index.ts
(+44 files in other folders)
